Fix z-index

--- a/wp-content/themes/lighthouse/style.css
+++ b/wp-content/themes/lighthouse/style.css
@@ -342,6 +342,7 @@ html, body {
   margin-bottom: -12px;
   position: relative;
   max-width: 640px;
+  z-index: 1000;
 }
 
 .syllabus-container .cta p {
